# sf32lb52-pac

./: CMSIS-SVD.xsd  Cargo.toml  LICENSE  README.md  SF32LB52x.svd  build.rs  regenerate.sh  remove_rsvd.py  svd2rust.toml
src/: aes.rs  atim1.rs  audcodec.rs  audprc.rs  btim2.rs  crc2.rs  dmac2.rs  efusec.rs  epic.rs  extdma.rs  ezip1.rs  generic.rs  gpadc.rs  gptim1.rs  hpsys_aon.rs  hpsys_cfg.rs  hpsys_gpio.rs  hpsys_pinmux.rs  hpsys_rcc.rs  i2c2.rs  i2s1.rs  lcdc1.rs  lib.rs  lpsys_aon.rs  lpsys_cfg.rs  lpsys_pinmux.rs  lpsys_rcc.rs  lptim1.rs  mpi1.rs  pdm1.rs  pmuc.rs  ptc2.rs  sdmmc1.rs  spi1.rs  trng.rs  tsen.rs  usart2.rs  wdt2.rs
src/aes/: aes_setting.rs  command.rs  dma_data.rs  dma_in.rs  dma_out.rs  ext_key_w0.rs  ext_key_w1.rs  ext_key_w2.rs  ext_key_w3.rs  ext_key_w4.rs  ext_key_w5.rs  ext_key_w6.rs  ext_key_w7.rs  hash_dma_data.rs  hash_dma_in.rs  hash_iv_h0.rs  hash_iv_h1.rs  hash_iv_h2.rs  hash_iv_h3.rs  hash_iv_h4.rs  hash_iv_h5.rs  hash_iv_h6.rs  hash_iv_h7.rs  hash_len_h.rs  hash_len_l.rs  hash_result_h0.rs  hash_result_h1.rs  hash_result_h2.rs  hash_result_h3.rs  hash_result_h4.rs  hash_result_h5.rs  hash_result_h6.rs  hash_result_h7.rs  hash_result_len_h.rs  hash_result_len_l.rs  hash_setting.rs  irq.rs  iv_w0.rs  iv_w1.rs  iv_w2.rs  (+3 more)
src/atim1/: af1.rs  af2.rs  arr.rs  bdtr.rs  ccer.rs  ccmr1.rs  ccmr3.rs  ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  cnt.rs  cr1.rs  cr2.rs  dier.rs  egr.rs  psc.rs  rcr.rs  smcr.rs  sr.rs
src/audcodec/: adc1_cfg1.rs  adc1_cfg2.rs  adc2_cfg1.rs  adc2_cfg2.rs  adc_ana_cfg.rs  adc_cfg.rs  adc_ch0_cfg.rs  (+39 more)
(+976 files in other folders)
