[package]
name = "sf32lb52-pac"
version = "0.1.2"
edition = "2021"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
description = "Peripheral Access Crate for SF32LB52 microcontrollers"
keywords = ["pac", "arm", "cortex-m", "SF32LB52", "svd2rust"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/BogdanOlar/sf32lb52-pac"

[dependencies]
critical-section = { version = "1.1", optional = true }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
defmt = { version = "0.3", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['critical-section', 'rt']
default-target = "thumbv7m-none-eabi"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
